# azure-cost-forecasting-engine

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  PRIVACY.md  README.de.md  README.md  ROADMAP.md  SECURITY.md  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
acfe/: __init__.py  analyzer.py  client.py  demo.py  forecasting.py  models.py  normalizer.py  report.py
docs/: azure_setup.md  forecasting_methodology.md
examples/: run_demo.py
reports/: sample_forecast.json  sample_forecast.md
tests/: test_analyzer.py  test_forecasting.py  test_normalizer.py
