[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-cost-forecasting-engine"
version = "1.0.0"
description = "Analyze and forecast Azure costs using historical consumption data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
acfe = "cli:cli"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["acfe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
